# PyJsCppCli

./: .gitattributes  .gitignore  .gitigore  .pre-commit-config.yaml  Architecture.md  Article.md  CMakeLists.txt  Doxyfile  Makefile  README.md  Readme.md  __init__.py  ask  b  config.json  create.py  demo.sh  demo_system.py  fred  generate_architecture.py  generate_responses.py  main.py  package-lock.json  pyproject.toml  pytest.ini  r  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  t  t.py
.github/workflows/: ci.yml  release.yml  test.yml
AI/: __init__.py  build_info.py  constants.py
AI/Api/: async_client.py  client.py
AI/Bindings/: VariableApi.cpp
AI/Modes/: README.md  async_interactive.py  interactive.py
AI/Plugins/: decorators.py  plugin_manager.py
AI/Utils/: connection_pool.py  exceptions.py  interactive.py  io.py  music.py  output_formatter.py  streaming.py
DefaultConfig/: README.md  aliases.json  models.json  system  templates.json
Doxygen/: Doxyfile
Resources/: README.md  generate_architecture.py
Scripts/: b  common.sh  demo.sh  install_alias.sh  r  t
Tests/: __init__.py  conftest.py
Tests/Cpp/: CMakeLists.txt  TestVariableApi.cpp
Tests/Integration/: test_full_conversation.py  test_variable_integration.py
Tests/Unit/: test_api_client.py  test_cli.py  test_config.py  test_interactive_mode.py  test_io_utils.py  test_music.py  test_theme.py  test_validation.py  test_variables.py
ai/: README.md  __init__.py  __main__.py  build_info.py  cli.py  constants.py  models.py
ai/api/: README.md  __init__.py  async_client.py  client.py
ai/bindings/: CMakeLists.txt  README.md  variable_api.cpp
ai/modes/: README.md  async_interactive.py  interactive.py
ai/plugins/: README.md  __init__.py  base.py  decorators.py  plugin_manager.py
ai/utils/: README.md  colors.py  config.py  config_loader.py  connection_pool.py  exceptions.py  interactive.py  io.py  logging.py  markdown_renderer.py  midi_music.py  music.py  output_formatter.py  spinner.py  streaming.py  theme_config.py  validation.py  variables.py
ask/: build_info.py  cli.py  constants.py  models.py
ask/api/: README.md
ask/bindings/: CMakeLists.txt
ask/modes/: async_interactive.py  interactive.py
ask/plugins/: README.md
ask/utils/: README.md  __init__.py  colors.py  config.py  connection_pool.py  interactive.py  io.py  streaming.py  variables.py
docs/: api_reference.rst  conf.py  index.rst
html/: graph_legend.html  index.html
scripts/: README.md  common.sh
src/: CMakeLists.txt  build_config.h.in  main.cpp
src/api/base/: ApiException.h  HttpClient.cpp  HttpClient.h  IApiClient.h
src/api/clients/: AnthropicClient.cpp  AnthropicClient.h  CohereClient.cpp  CohereClient.h  GeminiClient.cpp  GeminiClient.h  OpenAIClient.cpp  OpenAIClient.h
src/api/factory/: ApiFactory.cpp  ApiFactory.h
src/config/: ApiConfig.h  ConfigManager.cpp  ConfigManager.h
test_env/: pyvenv.cfg
test_venv/: pyvenv.cfg
tests/: README.md
tests/cpp/: CMakeLists.txt  test_variable_api.cpp
tests/integration/: test_full_conversation.py  test_variable_integration.py
tests/unit/: test_api_client.py  test_cli.py  test_config.py  test_interactive_mode.py  test_io_utils.py  test_music.py  test_theme.py  test_validation.py  test_variables.py
